tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ShadowMetal-NO4JlNzcR_-1gaQi-kb3JA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15914674347961677604,
  "prerequisites": [
    241,
    81
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Shadow Metal is an extremely useful metal in the early game. It can be easily made via the crucible and refined once you unlock the vacuum freezer. \n\nIt's high durability makes it a fantastic candidate for handheld tools, prospector scanners, turbines, and even wand caps later down the line.\n\nStart off by making 5 ores, and doubling that using a macerator.\n\n[note]Hint: You can find the research early on in the Maleficia section of the Thaumonomicon[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Shadow Metal",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    241,
    81
  ],
  "rewards": [],
  "tasks": []
}
