tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__SilkyJewel-AAAAAAAAAAAAAAAAAAAEUA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1104,
  "prerequisites": [
    1100
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Silky jewels add silk touch to your tinkers tool, making them useful for collecting GT ores intact. You can also use them for other purposes, like obtaining cursed earth or grass blocks if needed.\n\nThe recipe can be found on the GTNH page after researching the enchantment table.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Silky Jewel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1100
  ],
  "rewards": [],
  "tasks": []
}
